# Hangman

./: .gitignore  CMakeLists.txt  README.md  server
Files/: config.txt  words.txt
HangmanClient/: App.config  App.xaml  App.xaml.cs  HangmanClient.csproj  HangmanClient.sln
HangmanClient/MVVM/Commands/: CommandBase.cs  CreateRoomCommand.cs  FinishGameCommand.cs  JoinRoomCommand.cs  NavigationCommand.cs  SubmitCommand.cs
HangmanClient/MVVM/Model/: Error.cs  Player.cs
HangmanClient/MVVM/View/: CreateRoomView.xaml  CreateRoomView.xaml.cs  ErrorMessageView.xaml  ErrorMessageView.xaml.cs  GameView.xaml  GameView.xaml.cs  JoinRoomView.xaml  JoinRoomView.xaml.cs  MainMenuView.xaml  MainMenuView.xaml.cs  MainPlayerView.xaml  MainPlayerView.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PlayerGallery.xaml  PlayerGallery.xaml.cs  RoomNumberView.xaml  RoomNumberView.xaml.cs  SecretWordView.xaml  SecretWordView.xaml.cs
HangmanClient/MVVM/ViewModel/: CreateRoomViewModel.cs  GameViewModel.cs  JoinRoomViewModel.cs  MainMenuViewModel.cs  MainViewModel.cs  ViewModelBase.cs
HangmanClient/Network/: PacketReader.cs  PacketWriter.cs  Server.cs
HangmanClient/Stores/: Game.cs  NavigationStore.cs
HangmanServer/: CMakeLists.txt  Game.cpp  Game.h  Handler.h  HangmanServer.cpp  HangmanServer.h  Player.cpp  Player.h  Room.cpp  Room.h  ServerHandler.cpp  ServerHandler.h  main.cpp
